@@ -11,6 +11,10 @@
 
   <properties>
     <maven.compiler.release>25</maven.compiler.release>
+    <!-- for structured concurrency preview features, disable in Java 27+ -->
+    <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
+    <default.surefire.argline>--enable-preview</default.surefire.argline>
+    <forkCount>0.9C</forkCount>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <picocli.version>4.7.7</picocli.version>
@@ -234,6 +238,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <argLine>@{argLine} ${default.surefire.argline}</argLine>
           <systemPropertyVariables>
             <jacoco.agent.path>${org.jacoco:org.jacoco.agent:jar:runtime}</jacoco.agent.path>
           </systemPropertyVariables>
